examples/test/testpolicy6103.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6103
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key11: value39
      key12: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value28
          key46: value6
      podSelector:
        matchLabels:
          key26: value7
